Aplicación Presupuesto Familiar Mensual - Funcionando completamente
 Corregidos errores de compilación y entidades faltantes
 Base de datos configurada con LocalDB y migraciones
 API REST funcionando con Swagger UI
 Reglas de negocio implementadas:
  - No permitir gastos que excedan límites de categoría
  - No permitir nombres de categorías duplicados
  - No permitir eliminar categorías con gastos
 Datos iniciales sembrados (meses y miembros de familia)
 Arquitectura limpia con 4 proyectos: Core, Application, Infrastructure, API

 Aplicación lista para usar en http://localhost:5000/swagger

--- a/src/PresupuestoFamiliarMensual.API/PresupuestoFamiliarMensual.API.csproj
+++ b/src/PresupuestoFamiliarMensual.API/PresupuestoFamiliarMensual.API.csproj
@@ -12,9 +12,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PresupuestoFamiliarMensual.Core\PresupuestoFamiliarMensual.Core.csproj" />
     <ProjectReference Include="..\PresupuestoFamiliarMensual.Application\PresupuestoFamiliarMensual.Application.csproj" />
     <ProjectReference Include="..\PresupuestoFamiliarMensual.Infrastructure\PresupuestoFamiliarMensual.Infrastructure.csproj" />
   </ItemGroup>
