--- a/src/PresupuestoFamiliarMensual.API/appsettings.json
+++ b/src/PresupuestoFamiliarMensual.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PresupuestoFamiliarMensual;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=db.gsnjopawzztqhaqspuvk.supabase.co;Port=5432;Database=postgres;Username=postgres;Password=Mazerunner12;SSL Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
