Configurar proyecto para despliegue en Railway - Agregar Dockerfile y configuración Docker - Crear railway.json con configuración específica - Agregar endpoint de health check - Configurar variables de entorno para Railway - Crear documentación de despliegue - Agregar script de migración

--- a/src/PresupuestoFamiliarMensual.API/appsettings.json
+++ b/src/PresupuestoFamiliarMensual.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=db.gsnjopawzztqhaqspuvk.supabase.co;Port=5432;Database=postgres;Username=postgres;Password=Mazerunner12;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": "${DATABASE_URL}"
   },
   "Logging": {
     "LogLevel": {
